--- a/src/components/TableOfContents/table-of-contents.css
+++ b/src/components/TableOfContents/table-of-contents.css
@@ -9,7 +9,7 @@ slot:not([name])::slotted(*) {
   --sgds-font-size-6: var(--sgds-font-size-4);
  --sgds-margin-md: var(--sgds-margin-none);
   --sgds-font-weight-bold: var(--sgds-font-weight-semibold);
-  margin-bottom: var(--sgds-margin-2-xs, var(--sgds-margin-none));
+  margin-bottom: var(--sgds-margin-md, var(--sgds-margin-none));
   font-size: var(--sgds-font-size-4);
   font-weight: var(--sgds-font-weight-bold, var(--sgds-font-weight-semibold));
 }
