--- a/src/components/Modal/modal.css
+++ b/src/components/Modal/modal.css
@@ -39,8 +39,8 @@
   display: flex;
   flex-direction: column;
   gap: var(--sgds-gap-2-xl);
-  margin: var(--sgds-margin-sm) var(--sgds-margin-xs);
-  max-height: calc(100% - var(--sgds-margin-sm) - var(--sgds-margin-sm));
+  margin: var(--sgds-margin-xl) var(--sgds-margin-lg);
+  max-height: calc(100% - var(--sgds-margin-xl) - var(--sgds-margin-lg));
 }
 
 
@@ -67,21 +67,21 @@
 
 @media screen and (min-width: 512px) {
   :host([size="fullscreen"]) .modal-panel {
-    margin: var(--sgds-margin-sm);
+    margin: var(--sgds-margin-xl);
   } 
 }
 
 @media screen and (min-width: 768px) {
   :host([size="fullscreen"]) .modal-panel {
-    margin: var(--sgds-margin-md);
-    max-height: calc(100% - var(--sgds-margin-md) - var(--sgds-margin-md));
+    margin: var(--sgds-margin-2-xl);
+    max-height: calc(100% - var(--sgds-margin-2-xl) - var(--sgds-margin-2-xl));
   } 
 }
 
 @media screen and (min-width: 1024px) {
   :host([size="fullscreen"]) .modal-panel {
-    margin: var(--sgds-margin-xl) var(--sgds-margin-xs);
-    max-height: calc(100% - var(--sgds-margin-xl) - var(--sgds-margin-xl));
+    margin: var(--sgds-margin-4-xl) var(--sgds-margin-lg);
+    max-height: calc(100% - var(--sgds-margin-4-xl) - var(--sgds-margin-4-xl));
     max-width: var(--sgds-dimension-888);
   } 
 }
