--- a/src/components/Modal/modal.css
+++ b/src/components/Modal/modal.css
@@ -14,6 +14,9 @@
 :host([size="lg"]) .modal-panel {
   max-width: var(--sgds-dimension-800);
 }
+:host([size="xl"]) .modal-panel {
+  max-width: var(--sgds-dimension-1280);
+}
 
 :host([size="fullscreen"]) .modal-overlay {
   background-color: var(--sgds-surface-default);
