--- a/playground/layouts/ContainerSideBar.html
+++ b/playground/layouts/ContainerSideBar.html
@@ -37,9 +37,6 @@
     overflow-y: scroll
   }
 
-  body {
-    height: calc(100vh - 108px);
-  }
 
   .header {
     position: sticky;
@@ -50,6 +47,7 @@
     display: flex;
     flex-direction: column;
     width: 100%;
+    /* height: 100%; */
   }
 </style>
 
