--- a/src/components/Table/table.css
+++ b/src/components/Table/table.css
@@ -18,7 +18,6 @@ table {
 
 .table {
   display: table;
-  vertical-align: top;
   width: 100%;
 }
 
@@ -29,7 +28,14 @@ table {
 .table > :not(caption) th,
 .table > :not(caption) td {
   border-bottom: var(--sgds-border-width-1) solid var(--sgds-border-color-muted);
-  padding: var(--sgds-padding-lg);
+}
+
+.table > :not(caption) th > div,
+.table > :not(caption) td > div {
+  display: flex;
+  align-items: center;
+  padding: var(--sgds-padding-sm) var(--sgds-padding-md);
+  min-height: var(--sgds-dimension-56);
 }
 
 .table > tbody {
@@ -52,6 +58,7 @@ table {
 :host([tableBorder]) .table {
   border: var(--sgds-border-width-1) solid;
   border-color: var(--sgds-border-color-muted);
+  border-bottom: 0;
 }
 
 :host([headerBackground]) th {
