--- a/playground/layouts/ContainerSideBar.html
+++ b/playground/layouts/ContainerSideBar.html
@@ -2,380 +2,28 @@
 <link href="../../src/themes/day.css" rel="stylesheet" type="text/css" />
 <link href="../../src/themes/night.css" rel="stylesheet" type="text/css" />
 <link href="../../src/css/sgds.css" rel="stylesheet" type="text/css" />
-<link href="../../lib/css/utility.css" rel="stylesheet" type="text/css" />
-
-<style>
-  /* .main-wrapper {
-        width: 100%;
-        overflow-y: auto
-    } */
-  /* body{
-       display: flex;
-       flex-direction: column;
-       height: 100vh;
-    } */
-  /* .sgds-container-sidebar{
-        flex-grow: 1;
-        overflow: hidden;
-    } */
-
-  /* .sgds-sidebar{
-        height: 100%;
-        overflow-y: auto;
-        
-
-        1. footer always not seen 
-        2. top nav not sticky 
-        3. provide two layout for footer being inside the scrollable area or outside the scrollable area
-    } */
-
-  .sgds-sidebar {
-    border-right: 1px solid gray;
-    position: sticky;
-    top: 108px;
-    height: calc(100vh - 108px);
-    overflow-y: scroll
-  }
-
-
-  .header {
-    position: sticky;
-    top: 0;
-  }
-
-  .main-wrapper {
-    display: flex;
-    flex-direction: column;
-    width: 100%;
-    /* height: 100%; */
-  }
-</style>
+<link href="..//css/utility.css" rel="stylesheet" type="text/css" />
 
 <body>
-  <div class="header">
-    <sgds-masthead></sgds-masthead>
-    <sgds-mainnav>
+  <div class="sgds:sticky sgds:top-0">
+    <sgds-masthead fluid></sgds-masthead>
+    <sgds-mainnav fluid>
       <strong slot="brand">SGDS</strong>
       <strong slot="end">End</strong>
     </sgds-mainnav>
   </div>
   <div class="sgds:flex sgds:flex-row">
-    <div class="sgds-sidebar">
-      <sgds-sidenav>
-        <sgds-sidenav-item>
-          <span slot="title">SideNavItem L1 label (menu) </span>
-          <sgds-sidenav-link><a href="#">SidenavLink L2 label</a></sgds-sidenav-link>
-          <sgds-sidenav-link>
-            <a href="#">SidenavLink L2 label</a>
-          </sgds-sidenav-link>
-          <sgds-sidenav-link>
-            <a href="#">SidenavLink L2 label</a>
-          </sgds-sidenav-link>
-          <sgds-sidenav-item>
-            <span slot="title">
-              SidenavItem L2 label
-            </span>
-            <sgds-sidenav-link>
-              <a href="#"> SidenavLink L3 label</a>
-            </sgds-sidenav-link>
-            <sgds-sidenav-link>
-              <a href="#">SidenavLink L3 label</a>
-            </sgds-sidenav-link>
-          </sgds-sidenav-item>
-        </sgds-sidenav-item>
-        <sgds-sidenav-item>
-          <span slot="title">SideNavItem L1 label (menu)</span>
-          <sgds-sidenav-link>
-            <a href="#">SidenavLink L2 label</a>
-            <sgds-sidenav-link>
-              <a href="#">SidenavLink L2 label</a>
-            </sgds-sidenav-link>
-          </sgds-sidenav-link></sgds-sidenav-item>
-        <sgds-sidenav-item>
-          <a href="#">SidenavItem L1 label (link)</a>
-        </sgds-sidenav-item>
-        <sgds-sidenav-item>
-          <a href="#">SidenavItem L1 label (link)</a>
-        </sgds-sidenav-item>
-        <sgds-sidenav-item>
-          <a href="#">SidenavItem L1 label (link)</a>
-        </sgds-sidenav-item>
-        <sgds-sidenav-item>
-          <a href="#">SidenavItem L1 label (link)</a>
-        </sgds-sidenav-item>
-        <sgds-sidenav-item>
-          <a href="#">SidenavItem L1 label (link)</a>
-        </sgds-sidenav-item>
-        <sgds-sidenav-item>
-          <a href="#">SidenavItem L1 label (link)</a>
-        </sgds-sidenav-item>
-        <sgds-sidenav-item>
-          <a href="#">SidenavItem L1 label (link)</a>
-        </sgds-sidenav-item>
-        <sgds-sidenav-item>
-          <a href="#">SidenavItem L1 label (link)</a>
-        </sgds-sidenav-item>
-        <sgds-sidenav-item>
-          <a href="#">SidenavItem L1 label (link)</a>
-        </sgds-sidenav-item>
-        <sgds-sidenav-item>
-          <a href="#">SidenavItem L1 label (link)</a>
-        </sgds-sidenav-item>
-        <sgds-sidenav-item>
-          <a href="#">SidenavItem L1 label (link)</a>
-        </sgds-sidenav-item>
-        <sgds-sidenav-item>
-          <a href="#">SidenavItem L1 label (link)</a>
-        </sgds-sidenav-item>
-        <sgds-sidenav-item>
-          <a href="#">SidenavItem L1 label (link)</a>
-        </sgds-sidenav-item>
-        <sgds-sidenav-item>
-          <a href="#">SidenavItem L1 label (link)</a>
-        </sgds-sidenav-item>
-        <sgds-sidenav-item>
-          <a href="#">SidenavItem L1 label (link)</a>
-        </sgds-sidenav-item>
-        <sgds-sidenav-item>
-          <a href="#">SidenavItem L1 label (link)</a>
-        </sgds-sidenav-item>
-        <sgds-sidenav-item>
-          <a href="#">SidenavItem L1 label (link)</a>
-        </sgds-sidenav-item>
-        <sgds-sidenav-item>
-          <a href="#">SidenavItem L1 label (link)</a>
-        </sgds-sidenav-item>
-        <sgds-sidenav-item>
-          <a href="#">SidenavItem L1 label (link)</a>
-        </sgds-sidenav-item>
-        <sgds-sidenav-item>
-          <a href="#">SidenavItem L1 label (link)</a>
-        </sgds-sidenav-item>
-        <sgds-sidenav-item>
-          <a href="#">SidenavItem L1 label (link)</a>
-        </sgds-sidenav-item>
-        <sgds-sidenav-item>
-          <a href="#">SidenavItem L1 label (link)</a>
-        </sgds-sidenav-item>
-        <sgds-sidenav-item>
-          <a href="#">SidenavItem L1 label (link)</a>
-        </sgds-sidenav-item>
-        <sgds-sidenav-item>
-          <a href="#">SidenavItem L1 label (link)</a>
-        </sgds-sidenav-item>
-        <sgds-sidenav-item>
-          <a href="#">SidenavItem L1 label (link)</a>
-        </sgds-sidenav-item>
-        <sgds-sidenav-item>
-          <a href="#">SidenavItem L1 label (link)</a>
-        </sgds-sidenav-item>
-        <sgds-sidenav-item>
-          <a href="#">SidenavItem L1 label (link)</a>
-        </sgds-sidenav-item>
-        <sgds-sidenav-item>
-          <a href="#">SidenavItem L1 label (link)</a>
-        </sgds-sidenav-item>
-        <sgds-sidenav-item>
-          <a href="#">SidenavItem L1 label (link)</a>
-        </sgds-sidenav-item>
-        <sgds-sidenav-item>
-          <a href="#">SidenavItem L1 label (link)</a>
-        </sgds-sidenav-item>
-        <sgds-sidenav-item>
-          <a href="#">SidenavItem L1 label (link)</a>
-        </sgds-sidenav-item>
-        <sgds-sidenav-item>
-          <a href="#">SidenavItem L1 label (link)</a>
-        </sgds-sidenav-item>
-        <sgds-sidenav-item>
-          <a href="#">SidenavItem L1 label (link)</a>
-        </sgds-sidenav-item>
-        <sgds-sidenav-item>
-          <a href="#">SidenavItem L1 label (link)</a>
-        </sgds-sidenav-item>
-        <sgds-sidenav-item>
-          <a href="#">SidenavItem L1 label (link)</a>
-        </sgds-sidenav-item>
-        <sgds-sidenav-item>
-          <a href="#">SidenavItem L1 label (link)</a>
-        </sgds-sidenav-item>
-        <sgds-sidenav-item>
-          <a href="#">SidenavItem L1 label (link)</a>
-        </sgds-sidenav-item>
-        <sgds-sidenav-item>
-          <a href="#">SidenavItem L1 label (link)</a>
-        </sgds-sidenav-item>
-        <sgds-sidenav-item>
-          <a href="#">SidenavItem L1 label (link)</a>
-        </sgds-sidenav-item>
-        <sgds-sidenav-item>
-          <a href="#">SidenavItem L1 label (link)</a>
-        </sgds-sidenav-item>
-        <sgds-sidenav-item>
-          <a href="#">SidenavItem L1 label (link)</a>
-        </sgds-sidenav-item>
-        <sgds-sidenav-item>
-          <a href="#">SidenavItem L1 label (link)</a>
-        </sgds-sidenav-item>
-        <sgds-sidenav-item>
-          <a href="#">SidenavItem L1 label (link)</a>
-        </sgds-sidenav-item>
-        <sgds-sidenav-item>
-          <a href="#">SidenavItem L1 label (link)</a>
-        </sgds-sidenav-item>
-        <sgds-sidenav-item>
-          <a href="#">SidenavItem L1 label (link)</a>
-        </sgds-sidenav-item>
-        <sgds-sidenav-item>
-          <a href="#">SidenavItem L1 label (link)</a>
-        </sgds-sidenav-item>
-        <sgds-sidenav-item>
-          <a href="#">SidenavItem L1 label (link)</a>
-        </sgds-sidenav-item>
-        <sgds-sidenav-item>
-          <a href="#">SidenavItem L1 label (link)</a>
-        </sgds-sidenav-item>
-        <sgds-sidenav-item>
-          <a href="#">SidenavItem L1 label (link)</a>
-        </sgds-sidenav-item>
-        <sgds-sidenav-item>
-          <a href="#">SidenavItem L1 label (link)</a>
-        </sgds-sidenav-item>
-        <sgds-sidenav-item>
-          <a href="#">SidenavItem L1 label (link)</a>
-        </sgds-sidenav-item>
-        <sgds-sidenav-item>
-          <a href="#">SidenavItem L1 label (link)</a>
-        </sgds-sidenav-item>
-        <sgds-sidenav-item>
-          <a href="#">SidenavItem L1 label (link)</a>
-        </sgds-sidenav-item>
-        <sgds-sidenav-item>
-          <a href="#">SidenavItem L1 label (link)</a>
-        </sgds-sidenav-item>
-      </sgds-sidenav>
+    <div class="sgds:sticky sgds:bg-translucent-subtle sgds:h-[calc(100vh-108px)] sgds:overflow-y-scroll sgds:top-27 sgds:md:w-68 sgds:w-18 ">
+      <div id="sidebar-component" class="sgds:bg-translucent-subtle sgds:h-500 sgds:w-full">Place SideBar here </div>
     </div>
-    <div class="main-wrapper">
-      <div class="sgds-container-sidebar">
-
-        <div>
-
-          Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's
-          standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to
-          make a type specimen book. It has survived not only five centuries, but also the leap into electronic
-          typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset
-          sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus
-          PageMaker including versions of Lorem Ipsum.
-          Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's
-          standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to
-          make a type specimen book. It has survived not only five centuries, but also the leap into electronic
-          typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset
-          sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus
-          PageMaker including versions of Lorem Ipsum.
-          Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's
-          standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to
-          make a type specimen book. It has survived not only five centuries, but also the leap into electronic
-          typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset
-          sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus
-          PageMaker including versions of Lorem Ipsum.
-          Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's
-          standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to
-          make a type specimen book. It has survived not only five centuries, but also the leap into electronic
-          typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset
-          sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus
-          PageMaker including versions of Lorem Ipsum.
-
-          Why do we use it?
-          It is a long established fact that a reader will be distracted by the readable content of a page when looking
-          at its layout. The point of using Lorem Ipsum is that it has a more-or-less normal distribution of letters, as
-          opposed to using 'Content here, content here', making it look like readable English. Many desktop publishing
-          packages and web page editors now use Lorem Ipsum as their default model text, and a search for 'lorem ipsum'
-          will uncover many web sites still in their infancy. Various versions have evolved over the years, sometimes by
-          accident, sometimes on purpose (injected humour and the like).
-
-
-          Where does it come from?
-          Contrary to popular belief, Lorem Ipsum is not simply random text. It has roots in a piece of classical Latin
-          literature from 45 BC, making it over 2000 years old. Richard McClintock, a Latin professor at Hampden-Sydney
-          College in Virginia, looked up one of the more obscure Latin words, consectetur, from a Lorem Ipsum passage,
-          and going through the cites of the word in classical literature, discovered the undoubtable source. Lorem
-          Ipsum comes from sections 1.10.32 and 1.10.33 of "de Finibus Bonorum et Malorum" (The Extremes of Good and
-          Evil) by Cicero, written in 45 BC. This book is a treatise on the theory of ethics, very popular during the
-          Renaissance. The first line of Lorem Ipsum, "Lorem ipsum dolor sit amet..", comes from a line in section
-          1.10.32.
-
-          The standard chunk of Lorem Ipsum used since the 1500s is reproduced below for those interested. Sections
-          1.10.32 and 1.10.33 from "de Finibus Bonorum et Malorum" by Cicero are also reproduced in their exact original
-          form, accompanied by English versions from the 1914 translation by H. Rackham.
-
-          Where can I get some?
-          There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in
-          some form, by injected humour, or randomised words which don't look even slightly believable. If you are going
-          to use a passage of Lorem Ipsum, you need to be sure there isn't anything embarrassing hidden in the middle of
-          text. All the Lorem Ipsum generators on the Internet tend to repeat predefined chunks as necessary, making
-          this the first true generator on the Internet. It uses a dictionary of over 200 Latin words, combined with a
-          handful of model sentence structures, to generate Lorem Ipsum which looks reasonable. The generated Lorem
-          Ipsum is therefore always free from repetition, injected humour, or non-characteristic words etc.
-
-          5
-          paragraphs
-          words
-          bytes
-          lists
-          Start with 'Lorem
-          ipsum dolor sit amet...'
-          Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's
-          standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to
-          make a type specimen book. It has survived not only five centuries, but also the leap into electronic
-          typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset
-          sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus
-          PageMaker including versions of Lorem Ipsum.
-
-          Why do we use it?
-          It is a long established fact that a reader will be distracted by the readable content of a page when looking
-          at its layout. The point of using Lorem Ipsum is that it has a more-or-less normal distribution of letters, as
-          opposed to using 'Content here, content here', making it look like readable English. Many desktop publishing
-          packages and web page editors now use Lorem Ipsum as their default model text, and a search for 'lorem ipsum'
-          will uncover many web sites still in their infancy. Various versions have evolved over the years, sometimes by
-          accident, sometimes on purpose (injected humour and the like).
-
-
-          Where does it come from?
-          Contrary to popular belief, Lorem Ipsum is not simply random text. It has roots in a piece of classical Latin
-          literature from 45 BC, making it over 2000 years old. Richard McClintock, a Latin professor at Hampden-Sydney
-          College in Virginia, looked up one of the more obscure Latin words, consectetur, from a Lorem Ipsum passage,
-          and going through the cites of the word in classical literature, discovered the undoubtable source. Lorem
-          Ipsum comes from sections 1.10.32 and 1.10.33 of "de Finibus Bonorum et Malorum" (The Extremes of Good and
-          Evil) by Cicero, written in 45 BC. This book is a treatise on the theory of ethics, very popular during the
-          Renaissance. The first line of Lorem Ipsum, "Lorem ipsum dolor sit amet..", comes from a line in section
-          1.10.32.
-
-          The standard chunk of Lorem Ipsum used since the 1500s is reproduced below for those interested. Sections
-          1.10.32 and 1.10.33 from "de Finibus Bonorum et Malorum" by Cicero are also reproduced in their exact original
-          form, accompanied by English versions from the 1914 translation by H. Rackham.
-
-          Where can I get some?
-          There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in
-          some form, by injected humour, or randomised words which don't look even slightly believable. If you are going
-          to use a passage of Lorem Ipsum, you need to be sure there isn't anything embarrassing hidden in the middle of
-          text. All the Lorem Ipsum generators on the Internet tend to repeat predefined chunks as necessary, making
-          this the first true generator on the Internet. It uses a dictionary of over 200 Latin words, combined with a
-          handful of model sentence structures, to generate Lorem Ipsum which looks reasonable. The generated Lorem
-          Ipsum is therefore always free from repetition, injected humour, or non-characteristic words etc.
-
-          5
-          paragraphs
-          words
-          bytes
-          lists
-          Start with 'Lorem
-          ipsum dolor sit amet...'
+    <div class="sgds:flex sgds:flex-col sgds:w-full ">
+      <div class="sgds-container-sidebar sgds:py-2-xl">
+        <div id="content" class="sgds:bg-translucent-subtle sgds:h-250 sgds:w-full">
+          Place content here
         </div>
-
       </div>
       <sgds-footer></sgds-footer>
     </div>
   </div>
 </body>
 
-<!-- <sgds-footer></sgds-footer> -->
