--- a/src/components/Sidebar/sidebar-option.css
+++ b/src/components/Sidebar/sidebar-option.css
@@ -3,6 +3,11 @@
   cursor: pointer;
 }
 
+.sidebar-option.active {
+  background-color: var(--sgds-surface-raised);
+  color: var(--sgds-primary-color-default);
+}
+
 .sidebar-option-label-wrapper {
   display: flex;
   font-size: var(--sgds-font-size-1);
@@ -20,33 +25,18 @@
   justify-content: center;
 }
 
-.sidebar-nested-overlay {
+.sidebar-submenu {
+  overflow: hidden;
+}
+
+.sidebar-submenu > div {
+  padding: var(--sgds-padding-xs);
   pointer-events: none;
-  position: fixed;
-  width: var(--sgds-dimension-280);
-  padding: var(--sgds-padding-md) var(--sgds-padding-xs);
-  background-color: var(--sgds-bg-default);
-  opacity: 0;
-  top: 0;
-  left: 0;
-  bottom: 0;
-  z-index: -1;
-  width: var(--sgds-dimension-280);
+  margin-top: -100%;
   transition: all var(--sgds-motion-duration-standard) var(--sgds-motion-easing-standard);
-  border-right: var(--sgds-border-width-1) solid var(--sgds-border-color-muted);
-  transition-property: opacity left;
 }
 
-.sidebar-option--collapsed .sidebar-nested-overlay {
-  width: 0;
-  opacity: 0;
-  pointer-events: none;
-  left: var(--sgds-dimension-72);
-}
-
-.sidebar-nested-overlay.show {
+.sidebar-submenu.show > div {
   pointer-events: auto;
-  opacity: 1;
-  left: var(--sgds-dimension-280);
-  z-index: 1100;
+  margin-top: 0;
 }
