--- a/src/components/Sidebar/sidebar.css
+++ b/src/components/Sidebar/sidebar.css
@@ -1,4 +1,5 @@
 .sidebar {
+  position: relative;
   display: flex;
   flex-direction: column;
   height: 100%;
@@ -58,4 +59,32 @@
 
 .sidebar-content::-webkit-scrollbar-thumb:hover {
   background: var(--sgds-color-subtle);
+}
+
+.sidebar-nested-overlay {
+  pointer-events: none;
+  position: absolute;
+  width: var(--sgds-dimension-280);
+  padding: var(--sgds-padding-md) var(--sgds-padding-xs);
+  background-color: var(--sgds-bg-default);
+  opacity: 0;
+  top: 0;
+  left: 0;
+  bottom: 0;
+  z-index: -1;
+  width: var(--sgds-dimension-280);
+  transition: all var(--sgds-motion-duration-standard) var(--sgds-motion-easing-standard);
+  border-right: var(--sgds-border-width-1) solid var(--sgds-border-color-muted);
+  transition-property: opacity left;
+}
+
+.sidebar-nested-overlay.show {
+  pointer-events: auto;
+  opacity: 1;
+  left: var(--sgds-dimension-280);
+  z-index: 1100;
+}
+
+.sidebar--collapsed .sidebar-nested-overlay.show {
+  left: var(--sgds-dimension-72);
 }
