chore(Sidebar): added keyboard handling events and fix some stylings

--- a/src/components/Sidebar/sidebar-option.css
+++ b/src/components/Sidebar/sidebar-option.css
@@ -1,6 +1,8 @@
 .sidebar-option {
   padding: var(--sgds-padding-xs);
   cursor: pointer;
+  border-radius: var(--sgds-border-radius-md);
+  outline-offset: -1px;
 }
 
 .sidebar-option.active {
